--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "frontend-hiring-challenge",
   "version": "1.0.0",
+  "homepage": "https://knrktam.github.io/Aircall-master",
+  "deploy": "gh-pages -d build",
   "description": "Leap test",
   "main": "index.js",
   "repository": "",
@@ -8,8 +10,11 @@
   "license": "",
   "private": false,
   "scripts": {
+    
     "start": "webpack-dev-server --mode development --open",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
@@ -22,6 +27,7 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "gh-pages": "^4.0.0",
     "moment": "^2.29.4",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
