--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "moment": "^2.29.4",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
+    "react-hot-toast": "^2.3.0",
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
