--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "private": true,
   "scripts": {
     "start": "webpack-dev-server --mode development --open",
-    "build": "webpack-dev-server --mode production --open"
+    "build": "webpack --mode production"
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
@@ -25,7 +25,6 @@
     "moment": "^2.29.4",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
-    "react-hot-toast": "^2.3.0",
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
