--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "repository": "",
   "author": "",
   "license": "",
-  "private": false,
+  "private": true,
   "scripts": {
     "start": "webpack-dev-server --mode development --open",
     "build": "webpack --mode production"
@@ -22,10 +22,13 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "babel-runtime": "^6.26.0",
     "moment": "^2.29.4",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
-    "react-router-dom": "^6.3.0"
+    "react-hot-toast": "^2.3.0",
+    "react-router-dom": "^6.3.0",
+    "regenerator-runtime": "^0.13.9"
   },
   "devDependencies": {
     "babel-preset-env": "1.7.0",
