--- a/package.json
+++ b/package.json
@@ -33,11 +33,11 @@
   "devDependencies": {
     "babel-preset-env": "1.7.0",
     "babel-preset-react": "6.24.*",
-    "css-loader": "2.1.*",
+    "css-loader": "2.1.1",
     "html-loader": "0.5.*",
     "html-webpack-plugin": "3.2.*",
     "style-loader": "0.23.*",
-    "webpack": "4.29.*",
+    "webpack": "4.29.6",
     "webpack-cli": "3.2.*",
     "webpack-dev-server": "3.1.*"
   }
