--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "html-loader": "0.5.*",
     "html-webpack-plugin": "3.2.*",
     "style-loader": "0.23.*",
-    "webpack": "4.29.6",
+    "webpack": "^5.74.0",
     "webpack-cli": "3.2.*",
     "webpack-dev-server": "3.1.*"
   }
