--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.3",
-    "@mui/material": "^5.10.4",
+    "@mui/material": "^5.10.2",
     "axios": "^0.27.2",
     "babel-core": "^6.26.3",
     "babel-loader": "7",
@@ -36,7 +36,7 @@
     "html-loader": "0.5.*",
     "html-webpack-plugin": "3.2.*",
     "style-loader": "0.23.*",
-    "webpack": "^5.74.0",
+    "webpack": "4.29.6",
     "webpack-cli": "3.2.*",
     "webpack-dev-server": "3.1.*"
   }
