--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "private": true,
   "scripts": {
     "start": "webpack-dev-server --mode development --open",
-    "build": "webpack-dev-server --mode production --open"
+    "build": "webpack --mode production --open"
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
